# takehome_ca

./: .gitignore  README.md  TECHNICAL_DESIGN.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  main.py  models.py  schemas.py  store.py
backend/app/routes/: auth.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_contract.py  test_store_concurrency.py  test_tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: task-flow.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  tasks.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AppShell.tsx  ErrorState.tsx  LoadingState.tsx  StatsPanel.tsx  TaskForm.test.tsx  TaskForm.tsx  TaskRow.tsx
frontend/src/pages/: LoginPage.tsx  TaskDetailPage.test.tsx  TaskDetailPage.tsx  TaskListPage.test.tsx  TaskListPage.tsx
frontend/src/test/: factories.ts
frontend/src/utils/: date.ts
